--- a/lab1/src/index.html
+++ b/lab1/src/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starter</title>
   </head>
+
   <body>
+    <button id="removeMore">Remove checked input</button>
 
-    <input value="" placeholder="pole1" type="tex"></input>
-    <input value="" placeholder="pole2" type="text"></input>
-    <input value="" placeholder="pole3" type="text"></input>
-    <input value="" placeholder="pole 4" type="text"></input>
+    <input placeholder="Ilość pól" id="quantity" type="text"></input>
+    <button id="generate">Generate</button>
+    <div id="listInputs">
+      
+    </div>
 
-    <p>SUMA: <span id="SUMA">brak</span></p>
-    <p >SREDNIA: <span id="SREDNIA">brak</span></p>
-    <p >MIN: <span id="MIN">brak</span></p>
-    <p >MAX: <span id="MAX">brak</span></p>
 
+    <p>SUM: <span id="sum">brak</span></p>
+    <p>AVERAGE: <span id="average">brak</span></p>
+    <p>MIN: <span id="min">brak</span></p>
+    <p>MAX: <span id="max">brak</span></p>
     <script src="index.js"></script>
   </body>
+
 </html>
