end dormCreateor lab1

--- a/FormCreator/src/index.html
+++ b/FormCreator/src/index.html
@@ -8,7 +8,12 @@
   </head>
 
   <body>
-    <h1>Test</h1>
+   <main id="main">
+    <div id="input-wrapper">
+
+    </div>
+    <button id="save">ZATWIERDŹ</button>
+   </main>
     <script src="index.js"></script>
   </body>
 
