end stage 2 formCreator app

--- a/FormCreator/src/index.html
+++ b/FormCreator/src/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FormCreator</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FormCreator</title>
+</head>
 
-  <body>
-   <main id="main">
-    <div id="input-wrapper">
+<body>
+  <main id="main">
+    <div class="form-creator-index">
+      <a class="big-link one" href="/document-list.html">
+        Lista dokumentów
+      </a>
+      <a class="big-link two" href="/new-document.html">
+        Nowy dokument
+      </a>
 
     </div>
-    <button id="save">ZATWIERDŹ</button>
-   </main>
-    <script src="index.js"></script>
-  </body>
+  </main>
+  <script src="index.js"></script>
+</body>
 
 </html>
