genareta from creator html file, structure to file

--- a/FormCreator/src/index.html
+++ b/FormCreator/src/index.html
@@ -16,6 +16,12 @@
       <a class="big-link two" href="/new-document.html">
         Nowy dokument
       </a>
+      <a class="big-link two" href="/form-list.html">
+        Lista formularzy
+      </a>
+      <a class="big-link two" href="/form-creator.html">
+        Nowy formularz
+      </a>
 
     </div>
   </main>
