--- a/FormCreator/src/form-list.html
+++ b/FormCreator/src/form-list.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New FormCreator</title>
-  </head>
+    <title>Edit FormCreator</title>
+</head>
 
-  <body>
-   <main id="main">
-    <div id="input-wrapper">
+<body>
+    <main id="main">
+        <div id="input-wrapper">
 
-    </div>
-   </main>
+        </div>
+    </main>
     <script src="index.js"></script>
-  </body>
+</body>
 
 </html>
