--- a/FormCreator/src/document-list.html
+++ b/FormCreator/src/document-list.html
@@ -9,9 +9,11 @@
 
 <body>
     <main id="main">
-        <div id="list-documents">
+        <section id="document-list">
+            <div id="list-documents" class="panel">
 
-        </div>
+            </div>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
