--- a/FormCreator/src/index.html
+++ b/FormCreator/src/index.html
@@ -13,9 +13,9 @@
       <a class="big-link one" href="/document-list.html">
         Lista dokumentów
       </a>
-      <a class="big-link two" href="/new-document.html">
+      <!-- <a class="big-link two" href="/new-document.html">
         Nowy dokument
-      </a>
+      </a> -->
       <a class="big-link two" href="/form-list.html">
         Lista formularzy
       </a>
